--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@import 'body';
-@import 'footer';
-@import 'header';
-@import 'hero';
-@import 'veriabels';
+@use 'variables';
+@use 'header';
+@use 'body';
+@use 'hero';
+@use 'footer';
